[gd_scene load_steps=2 format=3 uid="uid://c8bbv36o6rc3t"]

[ext_resource type="Script" uid="uid://mex4nwa5rcm2" path="res://demo/dicom_viewer_ui.gd" id="1_6arit"]

[node name="DicomViewerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6arit")

[node name="DicomViewer" type="DicomViewer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -300.0
offset_right = -20.0
offset_bottom = 300.0
grow_horizontal = 0
grow_vertical = 2

[node name="OpenFilesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Open DICOM Files (O)"

[node name="OpenFolderButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Open DICOM Folder (F)"

[node name="FileInfo" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FileIndexLabel" type="Label" parent="VBoxContainer/FileInfo"]
layout_mode = 2
text = "No files loaded"
horizontal_alignment = 1

[node name="FileNavigation" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PrevFileButton" type="Button" parent="VBoxContainer/FileNavigation"]
layout_mode = 2
size_flags_horizontal = 3
text = "← Prev (↑)"

[node name="NextFileButton" type="Button" parent="VBoxContainer/FileNavigation"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next (↓) →"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="WindowControl" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="WindowLabel" type="Label" parent="VBoxContainer/WindowControl"]
layout_mode = 2
text = "Window: 400"

[node name="WindowSlider" type="HSlider" parent="VBoxContainer/WindowControl"]
layout_mode = 2

[node name="LevelControl" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="VBoxContainer/LevelControl"]
layout_mode = 2
text = "Level: 40"

[node name="LevelSlider" type="HSlider" parent="VBoxContainer/LevelControl"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Tip: Left-click drag on image
to adjust window/level"
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ZoomControls" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ZoomInButton" type="Button" parent="VBoxContainer/ZoomControls"]
layout_mode = 2
text = "Zoom In (+)"

[node name="ZoomOutButton" type="Button" parent="VBoxContainer/ZoomControls"]
layout_mode = 2
text = "Zoom Out (-)"

[node name="ResetButton" type="Button" parent="VBoxContainer/ZoomControls"]
layout_mode = 2
text = "Reset View (R)"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ready"
autowrap_mode = 2

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open DICOM Files"
initial_position = 2
size = Vector2i(800, 600)
ok_button_text = "Open"

[node name="FolderDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 2
size = Vector2i(800, 600)
ok_button_text = "Select Folder"
file_mode = 2

[connection signal="gui_input" from="DicomViewer" to="." method="_on_dicom_viewer_gui_input"]
[connection signal="pressed" from="VBoxContainer/OpenFilesButton" to="." method="_on_open_files_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OpenFolderButton" to="." method="_on_open_folder_button_pressed"]
[connection signal="pressed" from="VBoxContainer/FileNavigation/PrevFileButton" to="." method="_on_prev_file_button_pressed"]
[connection signal="pressed" from="VBoxContainer/FileNavigation/NextFileButton" to="." method="_on_next_file_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/WindowControl/WindowSlider" to="." method="_on_window_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/LevelControl/LevelSlider" to="." method="_on_level_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/ZoomControls/ZoomInButton" to="." method="_on_zoom_in_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ZoomControls/ZoomOutButton" to="." method="_on_zoom_out_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ZoomControls/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_file_dialog_files_selected"]
[connection signal="dir_selected" from="FolderDialog" to="." method="_on_folder_dialog_dir_selected"]
